# NOWS-Picture

./: .gitignore  main.py  nows_picture.spec  pyproject.toml  requirements.txt
